ClienteMS/Manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clientems
  labels:
    app: clientems
spec:
  replicas: 2
  selector:
    matchLabels:
      app: clientems
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5 
  template:
    metadata:
      labels:
        app: clientems
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: clientems
        image: enomoto/clientems:1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 250m
          limits:
            cpu: 500m
      imagePullSecrets:
      - name: regcred
