ClienteMS/Manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: clientems
spec:
    type: LoadBalancer
    ports:
    - port: 80 
    selector:
        app: clientems
